--- a/sass/application.scss
+++ b/sass/application.scss
@@ -1,6 +1,10 @@
 
 body {
   background: #EEE;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+
   .ribbon {
     position: relative;
     &:before, &:after {
@@ -52,4 +56,16 @@ body {
       box-shadow: grey 1px 1px 10px 1px;
     }
   }
+
+  main {
+    flex: 1 0 auto;
+  }
+
+  footer{
+    a.social{
+      margin-left: 10px;
+    }
+  }
 }
+
+
