--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,9 +8,7 @@
                     {{ partial "menu" . }}
                 </ul>
                 <ul class="side-nav" id="mobile">
-                    <li><a href="sass.html">Sass</a></li>
-                    <li><a href="badges.html">Components</a></li>
-                    <li><a href="collapsible.html">Javascript</a></li>
+                    {{ partial "menu" . }}
                 </ul>
             </div>
         </nav>
