--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,48 @@
 <main class="main">
     <div class="container">
         <div class="row">
+            <h2>Articles</h2>
+            {{ range where .Site.Pages "Type" "article" }}
+            {{ if .IsPage }}
+            <div class="col s12 m6 l4 item ">
+                <article class="card">
+                    <div class="ribbon {{ if .Params.color }}{{ .Params.color }}{{ else }}blue{{ end }}">
+                        <a href="{{ .Permalink }}" title="{{ .Title }}" class="waves-effect waves-light">
+                        <div class="ribbon-content">
+                        <span class="card-title">
+                            {{ .Title }}
+                        </span>
+                        </div>
+                        </a>
+                    </div>
 
+                    <div class="card-content blue-grey-text darken-4">
+                    </div>
+                </article>
+            </div>
+            {{ end }}
+            {{ end }}
+
+        </div>
+        <div class="row">
+            <h2>Présentation</h2>
+            {{ range where .Site.Pages "Type" "slide" }}
+            {{ if .IsPage }}
+            <div class="col s12 m6 l4 item ">
+                <article class="card">
+                    <div class="ribbon {{ if .Params.color }}{{ .Params.color }}{{ else }}blue{{ end }}">
+                        <div class="ribbon-content ">
+                        <span class="card-title">
+                            <a href="{{ .Permalink }}" title="{{ .Title }}" class="waves-effect waves-light">{{ .Title }}</a>
+                        </span>
+                        </div>
+                    </div>
+                    <div class="card-content blue-grey-text darken-4">
+                    </div>
+                </article>
+            </div>
+            {{ end }}
+            {{ end }}
         </div>
     </div>
 </main>
