--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,24 +1,24 @@
 {{ with .Site.Social.facebook }}
-<a href="" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-facebook"></i></a>
+<a href="https://facebook.com/{{ . }}" rel="noopener" target="_blank" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-facebook"></i></a>
 {{ end }}
 {{ with .Site.Social.instagram }}
-<a href="" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-instagram"></i></a>
+<a href="https://instagram.com/{{ . }}" rel="noopener" target="_blank" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-instagram"></i></a>
 {{ end }}
 {{ with .Site.Social.pintrest }}
-<a href="" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-pinterest"></i></a>
+<a href="https://pinterest.com/{{ . }}" rel="noopener" target="_blank" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-pinterest"></i></a>
 {{ end }}
 {{ with .Site.Social.googleplus }}
-<a href="" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-google-plus"></i></a>
+<a href="https://plus.google.com/{{ . }}" rel="noopener" target="_blank" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-google-plus"></i></a>
 {{ end }}
 {{ with .Site.Social.twitter }}
-<a href="" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-twitter"></i></a>
+<a href="https://twitter.com/{{ . }}" rel="noopener" target="_blank" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-twitter"></i></a>
 {{ end }}
 {{ with .Site.Social.github }}
-<a href="" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-github"></i></a>
+<a href="https://github.com/{{ . }}" rel="noopener" target="_blank" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-github"></i></a>
 {{ end }}
 {{ with .Site.Social.linkedin }}
-<a href="" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-linkedin"></i></a>
+<a href="https://linkedin.com/in/{{ . }}" rel="noopener" target="_blank" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-linkedin"></i></a>
 {{ end }}
 {{ with .Site.Social.email }}
-<a href="" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-envelope-o"></i></a>
+<a href="mailto:{{ . }}" class="social grey-text text-lighten-4 right"><i class="fa fa-lg fa-envelope-o"></i></a>
 {{ end }}
