--- a/sass/application.scss
+++ b/sass/application.scss
@@ -1,4 +1,3 @@
-
 body {
   background: #EEE;
   display: flex;
@@ -77,6 +76,122 @@ body {
       border-radius: 2px;
       line-height: 2em;
       text-decoration: none;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .container .row {
+      margin: 0;
+    }
+    // Resume specific
+    .resume .card {
+      .card-content {
+        h3.resume-subsection {
+          width: 105%;
+        }
+        ul li {
+          strong {
+            width: unquote((100 / (12 / 6)) + "%")
+          }
+          em {
+            width: unquote((100 / (12 / 6)) + "%")
+          }
+        }
+      }
+    }
+  }
+
+  @media only screen and (min-width: 601px) {
+    // Resume specific
+    .resume .card {
+      .card-content {
+        h3.resume-subsection {
+          width: 70%;
+        }
+        ul li {
+          strong {
+            width: unquote((100 / (12 / 4)) + "%")
+          }
+          em {
+            width: unquote((100 / (12 / 8)) + "%")
+          }
+        }
+      }
+    }
+  }
+
+  @media only screen and (min-width: 993px) {
+    // Resume specific
+    .resume .card {
+      .card-content {
+        h3.resume-subsection {
+          width: 60%;
+        }
+        ul li {
+          strong {
+            width: unquote((100 / (12 / 3)) + "%")
+          }
+          em {
+            width: unquote((100 / (12 / 9)) + "%")
+          }
+        }
+      }
+    }
+  }
+
+  // Resume specific
+  .resume .card {
+    .ribbon h2.resume-section {
+      font-size: 2.5rem;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      .card-title {
+        font-size: 2.5rem;
+        line-height: 110%;
+        margin: (2.5rem / 2) 0 (2.5rem / 2.5) 0;
+        font-weight: 400;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+      }
+    }
+    .card-content {
+      padding-top: 0;
+      h3.resume-subsection {
+        font-size: 1.5rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+        line-height: 110%;
+        position: relative;
+        color: white;
+        &:before, &:after {
+          content: "";
+          position: absolute;
+        }
+        .ribbon-content {
+          padding-left: 10px;
+        }
+      }
+      ul li {
+        overflow: auto;
+        ul li {
+          overflow: auto;
+          margin-left: 24px;
+          list-style-type: circle;
+        }
+        strong {
+          font-weight: bold;
+          font-size: 1.1rem;
+          float: left;
+          box-sizing: border-box;
+          padding: 0 1.5rem / 2;
+          min-height: 1px;
+        }
+        em {
+          box-sizing: border-box;
+          padding: 0 1.5rem / 2;
+          min-height: 1px;
+        }
+      }
     }
   }
 }
