--- a/sass/application.scss
+++ b/sass/application.scss
@@ -62,20 +62,33 @@ body {
     flex: 1 0 auto;
   }
 
+  .pagination {
+    margin: auto;
+    text-align: center;
+  }
+
   footer {
     a.social {
       margin-left: 10px;
     }
   }
 
-  .card .card-footer {
-    border-top: 1px solid rgba(160, 160, 160, 0.2);
-    padding: 16px 24px;
-    span.tags a.tag {
-      padding: 3px;
-      border-radius: 2px;
-      line-height: 2em;
-      text-decoration: none;
+  .card {
+    display: flex;
+    flex-direction: column;
+    .card-content {
+      flex: 1;
+    }
+    .card-footer {
+      border-top: 1px solid rgba(160, 160, 160, 0.2);
+      padding: 16px 24px;
+
+      span.tags a.tag {
+        padding: 3px;
+        border-radius: 2px;
+        line-height: 2em;
+        text-decoration: none;
+      }
     }
   }
 
