Fix bug + add js

--- a/layouts/_default/slide-baseof.html
+++ b/layouts/_default/slide-baseof.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>SLIDE {{ .Title }}</title>
+    <title>DEFAULT SLIDE {{ .Title }}</title>
 
     <link rel="stylesheet" href="{{ "lib/revealjs/css/reveal.css" | absURL }}">
     <link rel="stylesheet" href="{{ .Site.BaseURL }}lib/revealjs/css/theme/{{ .Params.Revealtheme}}.css">
