--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -77,7 +77,7 @@
     {{ range .Site.Params.custom_css }}
     <link rel="stylesheet" href="{{ . | absURL }}">
     {{ end }}
-    <script src="{{ "javascripts/modernizr.js" | absURL }}"></script>
+    <script src="{{ "js/modernizr-custom.js" | absURL }}"></script>
 
     {{ with .RSSLink }}
     <link href="{{ . }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
